<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Google Street View -->
    <item
        android:id="@+id/action_sm_google_street_view"
        android:icon="@drawable/ic_menu_map_street_view"
        android:showAsAction="always"
        android:title="@string/action_sm_google_street_view"
        tools:ignore="AlwaysShowAction,AppCompatResource" />

    <!-- Map mode -->
    <item
        android:id="@+id/action_sm_map_mode"
        android:icon="@drawable/ic_menu_map_layers"
        android:showAsAction="always"
        android:title="@string/action_sm_map_mode"
        tools:ignore="AlwaysShowAction,AppCompatResource">
        <menu>

            <!-- Normal map mode -->
            <item
                android:id="@+id/action_sm_map_mode_normal"
                android:showAsAction="never"
                android:title="@string/action_sm_map_mode_normal" />

            <!-- Terrain map mode -->
            <item
                android:id="@+id/action_sm_map_mode_terrain"
                android:showAsAction="never"
                android:title="@string/action_sm_map_mode_terrain" />

            <!-- Satellite map mode -->
            <item
                android:id="@+id/action_sm_map_mode_satellite"
                android:showAsAction="never"
                android:title="@string/action_sm_map_mode_satellite" />

            <!-- Hybrid map mode -->
            <item
                android:id="@+id/action_sm_map_mode_hybrid"
                android:showAsAction="never"
                android:title="@string/action_sm_map_mode_hybrid" />
        </menu>
    </item>

</menu>