<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Reset to default -->
    <item
        android:id="@+id/action_pt_reset"
        android:icon="@drawable/ic_action_ms_reset"
        android:showAsAction="always"
        android:title="@string/action_ms_reset"
        tools:ignore="AlwaysShowAction,AppCompatResource" />

    <!-- Refresh -->
    <item
        android:id="@+id/action_pt_refresh"
        android:icon="@drawable/ic_action_ms_refresh"
        android:showAsAction="always"
        android:title="@string/action_ms_refresh"
        tools:ignore="AlwaysShowAction,AppCompatResource" />

    <!-- Map -->
    <item
        android:id="@+id/action_pt_map"
        android:icon="@drawable/ic_action_ms_map"
        android:showAsAction="always"
        android:title="@string/action_ms_map"
        tools:ignore="AlwaysShowAction,AppCompatResource" />

</menu>