<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Reset position -->
    <item
        android:id="@+id/action_droidtrans_reset"
        android:icon="@drawable/ic_menu_mylocation"
        android:showAsAction="always"
        android:title="@string/action_droidtrans_reset"
        tools:ignore="AlwaysShowAction,AppCompatResource" />

    <!-- Favourites -->
    <item
        android:id="@+id/action_favourites"
        android:icon="@drawable/ic_menu_star"
        android:showAsAction="always"
        android:title="@string/action_droidtrans_favourites"
        tools:ignore="AlwaysShowAction,AppCompatResource" />

    <!-- Closest stations Map -->
    <item
        android:id="@+id/action_closest_stations_map"
        android:icon="@drawable/ic_menu_mapmode"
        android:showAsAction="always"
        android:title="@string/action_closest_stations_map"
        tools:ignore="AlwaysShowAction,AppCompatResource" />

</menu>